--- a/i_am_lost.html
+++ b/i_am_lost.html
@@ -12,6 +12,7 @@
 <hr>
 <body>
 <pre>
+<div>
 Today, I am feeling light,
 I really don't know-why?
 But surely I am
@@ -51,6 +52,7 @@ If you want to experience this,
 I may help you, fulfilling your wish;
 Take away from me this 'lost' memory,
 I will like losing it, to you, for free.
+</div>
 </pre>
 </body> 
 </html>
