--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <hr>
 <hr>
 <body>
+  <p><a href="https://rohitsnote.github.io/i_am_lost.html">I am Lost</a></p>
 <p style="color:powderblue;text-align:left;font-size:15px;">
 Author - Rohit<br>
 Contact - rohitsnote@rediffmail.com
