--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <hr>
 <p><a href="https://rohitsnote.github.io/monsoon_winds.html">Monsoon Winds</a></p>
 <hr>
-<p><a href="https://rohitsnote.github.io/o_moon.html">O Moon</a></p>
+<p><a href="https://rohitsnote.github.io/o_moon.html">O Moon!</a></p>
 <hr>
 <p><a href="https://rohitsnote.github.io/forgive_me.html">Forgive Me</a></p>
 <hr>
