Update and rename Trifle.html to trifle.html

--- a/trifle.html
+++ b/trifle.html
@@ -8,6 +8,8 @@
 <h1><a href="https://rohitsnote.github.io">Rohit's Note</a></h1>
 <hr>
 <hr>
+<h2>Trifle</h2>
+<hr>
 <body>
 <div>
 <h2>Journey</h2>
