--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <hr>
 <hr>
 <body>
-  <p><a href="https://rohitsnote.github.io/i_am_lost.html">I am Lost</a></p>
+<p><a href="https://rohitsnote.github.io/trifle.html">Trifle</a></p>
+<hr>
+ <p><a href="https://rohitsnote.github.io/i_am_lost.html">I am Lost</a></p>
 <hr>
 <p><a href="https://rohitsnote.github.io/light_in_the_dark.html">Light in the Dark</a></p>
 <hr>
