--- a/trifle.html
+++ b/trifle.html
@@ -9,7 +9,6 @@
 <hr>
 <hr>
 <h2>Trifle</h2>
-<hr>
 <body>
 <div>
 <h2>Journey</h2>
@@ -85,9 +84,24 @@ Sometimes it looks likes clouds are covering the sky but it is always the sky th
 </div>
 
 <div>
-<h2>Sometimes</h2>
+<h2>Life</h2>
 <pre>
-Destination leads to journey.
+Life is a verse, a note of universe.
+</pre>
+</div>
+
+<div>
+<h2>Life</h2>
+<pre>
+Life is a verse, a note of universe.
+</pre>
+</div>
+
+<div>
+<h2>Life</h2>
+<pre>
+Life is sweet and bitter game,
+And all the days are not the same.
 </pre>
 </div>
 </body>
