--- a/trifle.html
+++ b/trifle.html
@@ -9,14 +9,17 @@
 <hr>
 <hr>
 <h2>Trifle</h2>
+<hr>
 <body>
 <div>
+<h2>Journey</h2>
 <pre>
 Destination leads to journey.
 </pre>
 </div>
 
 <div>
+<h2>Story</h2>
 <pre>
 The Sun has its own light;
 Moon has its own shadow.
@@ -82,6 +85,7 @@ Sometimes it looks likes clouds are covering the sky but it is always the sky th
 </div>
 
 <div>
+<h2>Life</h2>
 <pre>
 Life is a verse, a note of universe.
 </pre>
